--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@ignite-ui/react": "^2.2.4",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.8.0",
     "@types/node": "18.11.18",
